--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                         <div class="col-lg-8 no-padding">
                             <div class="big-ad" style="background-image:url(images/login/LoginPageImage.png)">
                                 <figure><img src="images/logo.png" alt=""></figure>
-                                <h1>Welcome to the TOOSHARE</h1>
+                                <h1>Welcome to the SOCIEE</h1>
                             </div>
                         </div>
                         <div class="col-lg-4 no-padding">
