--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                             <div class="we-login-register">
                                 <div class="form-title">
                                     <i class="fa fa-key"></i>login
-                                    <span>sign in now and meet the awesome Friends around the world.</span>
+                                    <span>sign in now and meet the awesome Gamers around the world.</span>
                                 </div>
                                 <form class="we-form" action="index.html" method="post">
                                     <input type="text" placeholder="Email">
