--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 	<div class="row">
                         <div class="col-lg-8 no-padding">
                             <div class="big-ad" style="background-image:url(images/login/LoginPageImage.png)">
-                                <figure><img src="images/logo.png" alt=""></figure>
+                                <figure><img src="images/login.png" alt=""></figure>
                                 <h1>Welcome to the SOCIEE</h1>
                             </div>
                         </div>
@@ -36,9 +36,8 @@
                                     <span>sign in now and meet the awesome Gamers around the world.</span>
                                 </div>
                                 <form class="we-form" action="index.html" method="post">
-                                    <input type="text" placeholder="Email">
-                                    <input type="password" placeholder="Password">
-                                    <input type="tel" placeholder="+221 77 674 66 49">
+                                    <input type="text" placeholder="guest@sociee.com">
+                                    <input type="password" placeholder="●●●●●●●●●●●●">
                                     <input type="checkbox"><label>remember me</label>
                                     <button type="submit" data-ripple="">sign in</button>
                                     <a class="forgot underline" href="#" title="">forgot password?</a>
