--- a/login.html
+++ b/login.html
@@ -33,12 +33,12 @@
                             <div class="we-login-register">
                                 <div class="form-title">
                                     <i class="fa fa-key"></i>login
-                                    <span>sign in now and meet the awesome Gamers around the world.</span>
+                                    <span>sign in now and connect with<br> Gamers around the world.</span>
                                 </div>
                                 <form class="we-form" action="index.html" method="post">
                                     <input type="text" placeholder="guest@sociee.com">
                                     <input type="password" placeholder="●●●●●●●●●●●●">
-                                    <input type="checkbox"><label>remember me</label>
+                                    <input type="checkbox" class="ml-2"><label>remember me</label>
                                     <button type="submit" data-ripple="">sign in</button>
                                     <a class="forgot underline" href="#" title="">forgot password?</a>
                                 </form>
