--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="top-area">
 				<div class="top-search">
 					<form method="post" class="">
-						<input type="text" placeholder="Rechercher un cours (mot clés, domaine...)">
+						<input type="text" placeholder="Search">
 						<button data-ripple><i class="ti-search"></i></button>
 					</form>
 				</div>
@@ -121,11 +121,11 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/resources/thumb-2.jpg" alt="">
+											<img src="images/people/message-preview-1.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
-											<h6><a href="#" title="">Loren</a></h6>
-											<span><b>Amy</b> is mutule friend</span>
+											<h6><a href="#" title="">Eat Bullets</a></h6>
+											<span><b>Shoot 2 Kill</b> is mutual friend</span>
 											<i>yesterday</i>
 										</div>
 										<div class="add-del-friends">
@@ -137,11 +137,11 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/resources/thumb-3.jpg" alt="">
+											<img src="images/people/message-preview-2.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
-											<h6><a href="#" title="">Tina Trump</a></h6>
-											<span><b>Simson</b> is mutule friend</span>
+											<h6><a href="#" title="">Dark Knight</a></h6>
+											<span><b>Terrific Tornado</b> is mutual friend</span>
 											<i>2 days ago</i>
 										</div>
 										<div class="add-del-friends">
@@ -153,11 +153,11 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/resources/thumb-4.jpg" alt="">
+											<img src="images/people/message-preview-3.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
-											<h6><a href="#" title="">Andrew</a></h6>
-											<span><b>Bikra</b> is mutule friend</span>
+											<h6><a href="#" title="">Jack The Ripper</a></h6>
+											<span><b>Keen Team Six</b> is mutual friend</span>
 											<i>4 hours ago</i>
 										</div>
 										<div class="add-del-friends">
@@ -169,11 +169,11 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/resources/thumb-5.jpg" alt="">
+											<img src="images/people/message-preview-4.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
-											<h6><a href="#" title="">Dasha</a></h6>
-											<span><b>Sarah</b> is mutule friend</span>
+											<h6><a href="#" title="">Pixie Soldier</a></h6>
+											<span><b>Headshooter</b> is mutual friend</span>
 											<i>9 hours ago</i>
 										</div>
 										<div class="add-del-friends">
@@ -185,11 +185,11 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/resources/thumb-1.jpg" alt="">
+											<img src="images/people/message-preview-5.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
-											<h6><a href="#" title="">Emily</a></h6>
-											<span><b>Amy</b> is mutule friend</span>
+											<h6><a href="#" title="">Dead Shot</a></h6>
+											<span><b>Agent 47</b> is mutual friend</span>
 											<i>4 hours ago</i>
 										</div>
 										<div class="add-del-friends">
