--- a/index.html
+++ b/index.html
@@ -208,19 +208,19 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" class="setting-area-other" title="Messages" data-ripple=""><i class="fa fa-comment"></i><em class="bg-blue">9</em></a>
+						<a href="#" class="setting-area-other" title="Messages" data-ripple=""><i class="fa fa-comment"></i><em class="bg-blue">7</em></a>
 						<div class="dropdowns">
-							<span>5 New Messages <a href="#" title="">Mark all as read</a></span>
+							<span>7 New Messages <a href="#" title="">Mark all as read</a></span>
 							<ul class="drops-menu">
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/resources/thumb-1.jpg" alt="">
+											<img src="images/people/profile1.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>sarah Loren</h6>
-											<span><i class="ti-check"></i> Hi, how r u dear ...?</span>
+											<h6>Gerald Xbox</h6>
+											<span><i class="ti-check"></i> Check out the new game</span>
 											<i>2 min ago</i>
 										</div>
 									</a>
@@ -228,39 +228,39 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/resources/thumb-2.jpg" alt="">
+											<img src="images/people/profile2.jpg" alt="">
 											<span class="status f-offline"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Jhon doe</h6>
-											<span><i class="ti-check"></i> We’ll have to check that at the office and see if the client is on board with</span>
-											<i>2 min ago</i>
+											<h6>Arteta Gamer</h6>
+											<span><i class="ti-check"></i> LOgin to your console and get free virtual coins</span>
+											<i>5 min ago</i>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/resources/thumb-3.jpg" alt="">
+											<img src="images/people/profile3.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
-										<div class="mesg-meta">
-											<h6>Andrew</h6>
-											<span> <i class="fa fa-paperclip"></i>Hi James! It’s Diana, I just wanted to let you know that we have to reschedule..</span>
-											<i>2 min ago</i>
+										<div class="mesg-meta">						
+											<h6>Alice Lish</h6>
+											<span><i class="fa fa-paperclip"></i> How to I complete level 10 on fall guys...</span>
+											<i>7 min ago</i>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/resources/thumb-4.jpg" alt="">
+											<img src="images/people/profile4.jpg" alt="">
 											<span class="status f-offline"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Tom cruse</h6>
-											<span><i class="ti-check"></i> Great, I’ll see you tomorrow!.</span>
-											<i>2 min ago</i>
+											<h6>Justin Kaiga</h6>
+											<span><i class="ti-check"></i> Call Of Duty sucks A$$ 🤢 🤮 </span>
+											<i>2 hrs ago</i>
 										</div>
 									</a>
 									<span class="tag">New</span>
@@ -268,13 +268,13 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/resources/thumb-5.jpg" alt="">
+											<img src="images/people/profile5.jpg" alt="">
 											<span class="status f-away"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Amy</h6>
-											<span><i class="fa fa-paperclip"></i> Sed ut perspiciatis unde omnis iste natus error sit </span>
-											<i>2 min ago</i>
+											<h6>Drew Kimoney</h6>
+											<span> <i class="fa fa-paperclip"></i> I just hit top 10% on the leaderboards..</span>								
+											<i>3 hrs ago</i>
 										</div>
 									</a>
 									<span class="tag">New</span>
