--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/people/message-preview-1.jpg" alt="">
+											<img src="images/resources/message-preview-1.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
 											<h6><a href="#" title="">Eat Bullets</a></h6>
@@ -137,7 +137,7 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/people/message-preview-2.jpg" alt="">
+											<img src="images/resources/message-preview-2.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
 											<h6><a href="#" title="">Dark Knight</a></h6>
@@ -153,7 +153,7 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/people/message-preview-3.jpg" alt="">
+											<img src="images/resources/message-preview-3.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
 											<h6><a href="#" title="">Jack The Ripper</a></h6>
@@ -169,7 +169,7 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/people/message-preview-4.jpg" alt="">
+											<img src="images/resources/message-preview-4.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
 											<h6><a href="#" title="">Pixie Soldier</a></h6>
@@ -185,7 +185,7 @@
 								<li>
 									<div>
 										<figure>
-											<img src="images/people/message-preview-5.jpg" alt="">
+											<img src="images/resources/message-preview-5.jpg" alt="">
 										</figure>
 										<div class="mesg-meta">
 											<h6><a href="#" title="">Dead Shot</a></h6>
@@ -215,7 +215,7 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/people/profile1.jpg" alt="">
+											<img src="images/resources/profile1.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
@@ -228,7 +228,7 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/people/profile2.jpg" alt="">
+											<img src="images/resources/profile2.jpg" alt="">
 											<span class="status f-offline"></span>
 										</figure>
 										<div class="mesg-meta">
@@ -241,7 +241,7 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/people/profile3.jpg" alt="">
+											<img src="images/resources/profile3.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">						
@@ -254,7 +254,7 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/people/profile4.jpg" alt="">
+											<img src="images/resources/profile4.jpg" alt="">
 											<span class="status f-offline"></span>
 										</figure>
 										<div class="mesg-meta">
@@ -268,7 +268,7 @@
 								<li>
 									<a class="show-mesg" href="#" title="">
 										<figure>
-											<img src="images/people/profile5.jpg" alt="">
+											<img src="images/resources/profile5.jpg" alt="">
 											<span class="status f-away"></span>
 										</figure>
 										<div class="mesg-meta">
@@ -285,54 +285,56 @@
 					</li>
 					<li>
 						<a href="#" class="setting-area-other" title="Notification" data-ripple="">
-							<i class="fa fa-bell"></i><em class="bg-purple">7</em>
+							<i class="fa fa-bell"></i><em class="bg-purple">9</em>
 						</a>
 						<div class="dropdowns">
-							<span>4 New Notifications <a href="#" title="">Mark all as read</a></span>
+							<span>9 New Notifications <a href="#" title="">Mark all as read</a></span>
 							<ul class="drops-menu">
 								<li>
 									<a href="notifications.html" title="">
 										<figure>
-											<img src="images/resources/thumb-1.jpg" alt="">
+											<img src="images/resources/profile7.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>sarah Loren</h6>
-											<span>commented on your new profile status</span>
+											<h6>PlayBoi Gamer</h6>
+											<span>mentioned you in his post</span>
 											<i>2 min ago</i>
 										</div>
 									</a>
+									<span class="tag">New</span>
 								</li>
 								<li>
 									<a href="notifications.html" title="">
 										<figure>
-											<img src="images/resources/thumb-2.jpg" alt="">
+											<img src="images/resources/profile5.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Jhon doe</h6>
-											<span>Nicholas Grissom just became friends. Write on his wall.</span>
-											<i>4 hours ago</i>
+											<h6>Drew Kimoney</h6>
+											<span>Drew Kimoney unlocked a new achievement</span>
+											<i>3 hrs ago</i>
 											<figure>
-												<span>Today is Marina Valentine’s Birthday! wish for celebrating</span>
+												<span>Drew Kimoney reached top 10% on PUBG leaderboards</span>
 												<img src="images/birthday.png" alt="">
 											</figure>
 										</div>
 									</a>
+									<span class="tag">New</span>
 								</li>
 								<li>
 									<a href="notifications.html" title="">
 										<figure>
-											<img src="images/resources/thumb-3.jpg" alt="">
+											<img src="images/resources/profile4.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Andrew</h6>
+											<h6>Justin Kaiga</h6>
 											<span>commented on your photo.</span>
 											<i>Sunday</i>
 											<figure>
-												<span>"Celebrity looks Beautiful in that outfit! We should see each"</span>
-												<img src="images/resources/admin.jpg" alt="">
+												<span>"That controller looks awesome."</span>
+												<img src="images/resources/post1.jpg" alt="">
 											</figure>
 										</div>
 									</a>
@@ -340,30 +342,28 @@
 								<li>
 									<a href="notifications.html" title="">
 										<figure>
-											<img src="images/resources/thumb-4.jpg" alt="">
+											<img src="images/resources/profile2.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Tom cruse</h6>
-											<span>nvited you to attend to his event Goo in</span>
-											<i>May 19</i>
+											<h6>Arteta Gamer</h6>
+											<span>Invited you to attend to his event Goo in</span>
+											<i>aug 21</i>
 										</div>
 									</a>
-									<span class="tag">New</span>
 								</li>
 								<li>
 									<a href="notifications.html" title="">
 										<figure>
-											<img src="images/resources/thumb-5.jpg" alt="">
+											<img src="images/resources/profile1.jpg" alt="">
 											<span class="status f-online"></span>
 										</figure>
 										<div class="mesg-meta">
-											<h6>Amy</h6>
-											<span>Andrew Changed his profile picture. </span>
-											<i>dec 18</i>
+											<h6>Gerald Xbox</h6>
+											<span>Andrew Changed his profile picture.</span>
+											<i>jul 18</i>
 										</div>
 									</a>
-									<span class="tag">New</span>
 								</li>
 							</ul>
 							<a href="notifications.html" title="" class="more-mesg">View All</a>
