--- a/index.html
+++ b/index.html
@@ -371,18 +371,16 @@
 					</li>
 				</ul>
 				<div class="user-img">
-					<h5>Ismael LO</h5>
+					<h5>Sociee Guest</h5>
 					<img src="images/resources/admin.jpg" alt="">
 					<span class="status f-online"></span>
 					<div class="user-setting">
 						<ul class="log-out">
-							<li><a href="#" title=""><i class="fa fa-user-md"></i>Mon compte</a></li>
-							<li><a href="#" title=""><i class="fa fa-cogs"></i>Mes paramètres</a></li>
-							<li><a href="#" title=""><i class="fa fa-book"></i>Mes cours</a></li>
-							<li><a href="#" title=""><i class="fa fa-question-circle"></i>Aide</a></li>
-							<li><a href="#" title=""><i class="fa fa-question-circle"></i>Questions fréquentes</a></li>
+							<li><a href="#" title=""><i class="fa fa-user-md"></i>My account</a></li>
+							<li><a href="#" title=""><i class="fa fa-cogs"></i>My settings</a></li>
 							<li><a href="#" title=""><i class="fa fa-address-card"></i>Contact</a></li>
-							<li><a href="logout.html" title=""><i class="ti-power-off"></i>Déconnexion</a></li>
+							<li><a href="#" title=""><i class="fa fa-question-circle"></i>FAQs</a></li>
+							<li><a href="login.html" title=""><i class="ti-power-off"></i>Logout</a></li>
 						</ul>
 					</div>
 				</div>
