--- a/index.html
+++ b/index.html
@@ -39,58 +39,29 @@
 		<nav id="menu" class="res-menu">
 			<ul>
 				<li>
-					<a href="index.html" title=""><i class="fa fa-home mr-2"></i>Accueil</a>
+					<a href="index.html" title=""><i class="fa fa-home mr-2"></i>Home</a>
 				</li>
-				<li><span><i class="fa fa-user mr-2"></i>Amis</span>
-					<ul>
-						<li><a href="pitpoint.html" title="">PitPoint</a></li>
-						<li><a href="pitpoint-detail.html" title="">Pitpoint Detail</a></li>
-						<li><a href="pitpoint-list.html" title="">Pitpoint List style</a></li>
-						<li><a href="pitpoint-without-baner.html" title="">Pitpoint without Banner</a></li>
-						<li><a href="pitpoint-search-result.html" title="">Pitpoint Search</a></li>
-					</ul>
-				</li>
-				<li><span><i class="fa fa-desktop mr-2"></i>Xamuma</span>
-					<ul>
-						<li><a href="career.html" title="">Pitjob</a></li>
-						<li><a href="career-detail.html" title="">Pitjob Detail</a></li>
-						<li><a href="career-search-result.html" title="">Job seach page</a></li>
-						<li><a href="social-post-detail.html" title="">Social Post Detail</a></li>
+				<li><span><i class="fa fa-gear mr-2"></i>General</span>
+					<ul class="log-out">
+						<li><a href="#" title=""><i class="fa fa-user-md mr-2"></i>My Account</a></li>
+						<li><a href="#" title=""><i class="fa fa-cogs mr-2"></i>My Settings</a></li>
+						<li><a href="#" title=""><i class="fa fa-address-card mr-2"></i>Contact</a></li>
+						<li><a href="#" title=""><i class="fa fa-question-circle mr-2"></i>FAQs</a></li>
+						<li><a href="login.html" title=""><i class="ti-power-off mr-2"></i>Logout</a></li>
 					</ul>
 				</li>
 				<li><span><i class="fa fa-commenting mr-2"></i>Messages</span>
 					<ul>
-						<li><a href="timeline.html" title="">Timeline</a></li>
-						<li><a href="timeline-photos.html" title="">Timeline Photos</a></li>
-						<li><a href="timeline-videos.html" title="">Timeline Videos</a></li>
-						<li><a href="timeline-groups.html" title="">Timeline Groups</a></li>
-						<li><a href="timeline-friends.html" title="">Timeline Friends</a></li>
-						<li><a href="timeline-friends2.html" title="">Timeline Friends-2</a></li>
-						<li><a href="about.html" title="">Timeline About</a></li>
-						<li><a href="blog-posts.html" title="">Timeline Blog</a></li>
-						<li><a href="friends-birthday.html" title="">Friends' Birthday</a></li>
-						<li><a href="newsfeed.html" title="">Newsfeed</a></li>
-						<li><a href="search-result.html" title="">Search Result</a></li>
+						<li><a href="#" title="">Recent</a></li>
+						<li><a href="#" title="">Older</a></li>
+						<li><a href="#" title="">All</a></li>
 					</ul>
 				</li>
 				<li><span><i class="fa fa-bell mr-2"></i>Notifications</span>
 					<ul>
-						<li><a href="pittube.html" title="">Pittube</a></li>
-						<li><a href="pittube-detail.html" title="">Pittube single</a></li>
-						<li><a href="pittube-category.html" title="">Pittube Category</a></li>
-						<li><a href="pittube-channel.html" title="">Pittube Channel</a></li>
-						<li><a href="pittube-search-result.html" title="">Pittube Search Result</a></li>
-					</ul>
-				</li>
-				<li><span><i class="fa fa-gear mr-2"></i>Général</span>
-					<ul class="log-out">
-						<li><a href="#" title=""><i class="fa fa-user-md mr-2"></i>Mon compte</a></li>
-						<li><a href="#" title=""><i class="fa fa-cogs mr-2"></i>Mes paramètres</a></li>
-						<li><a href="#" title=""><i class="fa fa-book mr-2"></i>Mes cours</a></li>
-						<li><a href="#" title=""><i class="fa fa-question-circle mr-2"></i>Aide</a></li>
-						<li><a href="#" title=""><i class="fa fa-question-circle mr-2"></i>Questions fréquentes</a></li>
-						<li><a href="#" title=""><i class="fa fa-address-card mr-2"></i>Contact</a></li>
-						<li><a href="logout.html" title=""><i class="ti-power-off mr-2"></i>Déconnexion</a></li>
+						<li><a href="#" title="">Recent</a></li>
+						<li><a href="#" title="">Older</a></li>
+						<li><a href="#" title="">All</a></li>
 					</ul>
 				</li>
 			</ul>
