--- a/index.html
+++ b/index.html
@@ -464,23 +464,23 @@
 													</ul>
 												</div>
 
-											</div><!-- Weather Widget -->
+											</div>
 										</div><!-- weather widget-->
 										<div class="widget whitish low-opacity">
 											<div style="background-image: url(images/resources/dob2.png)"
 												class="bg-image"></div>
 											<div class="dob-head">
-												<img src="images/resources/sug-page-5.jpg" alt="">
-												<span>22nd Birthday</span>
+												<img src="images/resources/achievement.png" alt="">
+												<span>New Achievement</span>
 												<div class="dob">
-													<i>19</i>
-													<span>September</span>
+													<i>3</i>
+													<span>hrs ago</span>
 												</div>
 											</div>
 											<div class="dob-meta">
-												<figure><img src="images/resources/dob-cake.gif" alt=""></figure>
-												<h6><a href="#" title="">Lucy Carbel</a> valentine's birthday</h6>
-												<p>leave a message with your best wishes on his profile.</p>
+												<figure><img src="images/resources/achievement.gif" alt=""></figure>
+												<h6 class="mt-2"><a href="#" title="">Drew Kimoney</a> unlocked a new achievement</h6>
+												<p>leave a message or congratulate him on his profile.</p>
 											</div>
 										</div><!-- birthday widget -->
 										<div class="widget">
