twitter feed widget

--- a/index.html
+++ b/index.html
@@ -489,35 +489,32 @@
 												<li>
 													<i class="fa fa-twitter"></i>
 													<span>
-														<i>jhon william</i>
-														@jhonwilliam
+														<i>Twitter Gaming</i>
+														@TwitterGaming
 													</span>
-													<p>tomorrow with the company we were working and 5 child run away
-														from the working place. <a href="#" title="">#daydream5k</a>
+													<p>your preorder checkout in a GIF <a href="#" title="">#twitterGaming</a>
 													</p>
 													<em>2 hours ago</em>
 												</li>
 												<li>
 													<i class="fa fa-twitter"></i>
 													<span>
-														<i>Kelly watson</i>
-														@kelly
+														<i>Call Of Duty</i>
+														@CallOfDuty
 													</span>
-													<p>tomorrow with the company we were working and 5 child run away
-														from the working place. <a href="#" title="">#daydream5k</a>
+													<p>The worldwide reveal for <a href="#" title="">#BlackOpsColdWar</a> starts right NOW.
 													</p>
-													<em>2 hours ago</em>
+													<em>3 hours ago</em>
 												</li>
 												<li>
 													<i class="fa fa-twitter"></i>
 													<span>
-														<i>Jony bravo</i>
-														@jonibravo
+														<i>PlayStation</i>
+														@PlayStation
 													</span>
-													<p>tomorrow with the company we were working and 5 child run away
-														from the working place. <a href="#" title="">#daydream5k</a>
+													<p>Join us for the PlayStation 5 Showcase.<a href="#" title="">#ps5</a>
 													</p>
-													<em>2 hours ago</em>
+													<em>6 hours ago</em>
 												</li>
 											</ul>
 										</div><!-- twitter feed-->
