--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 											<h4 class="">advertisment</h4>
 											<figure>
 												<a href="#" title="Advertisment"><img
-														src="images/resources/ad-widget.gif" alt=""></a>
+														src="images/resources/ad-widget.jpg" alt=""></a>
 											</figure>
 										</div><!-- advertisment box -->
 										<div class="widget">
