--- a/index.html
+++ b/index.html
@@ -530,23 +530,19 @@
 											<ul class="naves">
 												<li>
 													<i class="ti-clipboard"></i>
-													<a href="newsfeed.html" title="">News feed</a>
+													<a href="#" title="">News feed</a>
 												</li>
 												<li>
 													<i class="ti-mouse-alt"></i>
-													<a href="inbox.html" title="">Inbox</a>
-												</li>
-												<li>
-													<i class="ti-files"></i>
-													<a href="fav-page.html" title="">My pages</a>
+													<a href="#" title="">Inbox</a>
 												</li>
 												<li>
 													<i class="ti-user"></i>
-													<a href="timeline-friends.html" title="">friends</a>
+													<a href="#" title="">friends</a>
 												</li>
 												<li>
 													<i class="ti-image"></i>
-													<a href="timeline-photos.html" title="">images</a>
+													<a href="#" title="">images</a>
 												</li>
 												<li>
 													<i class="ti-video-camera"></i>
@@ -554,23 +550,23 @@
 												</li>
 												<li>
 													<i class="ti-comments-smiley"></i>
-													<a href="messages.html" title="">Messages</a>
+													<a href="#" title="">Messages</a>
 												</li>
 												<li>
 													<i class="ti-bell"></i>
-													<a href="notifications.html" title="">Notifications</a>
+													<a href="#" title="">Notifications</a>
 												</li>
 												<li>
 													<i class="ti-share"></i>
-													<a href="people-nearby.html" title="">People Nearby</a>
+													<a href="#" title="">People Nearby</a>
 												</li>
 												<li>
 													<i class="fa fa-bar-chart-o"></i>
-													<a href="insights.html" title="">insights</a>
+													<a href="#" title="">insights</a>
 												</li>
 												<li>
 													<i class="ti-power-off"></i>
-													<a href="landing.html" title="">Logout</a>
+													<a href="login.html" title="">Logout</a>
 												</li>
 											</ul>
 										</div><!-- Shortcuts -->
