--- a/index.html
+++ b/index.html
@@ -575,24 +575,23 @@
 											<ul class="activitiez">
 												<li>
 													<div class="activity-meta">
-														<i>10 hours Ago</i>
-														<span><a href="#" title="">Commented on Video posted </a></span>
-														<h6>by <a href="time-line.html">black demon.</a></h6>
+														<i>2 Minutes Ago</i>
+														<span><a href="#" title="">Mention on a post </a></span>
+														<h6>by <a href="time-line.html">PlayBoi Gamer.</a></h6>
 													</div>
 												</li>
 												<li>
 													<div class="activity-meta">
-														<i>30 Days Ago</i>
+														<i>A While Ago</i>
+														<span><a href="#" title="">Comment on your photo.</a></span>
+														<h6>"<a href="#">That controller looks awesome</a>"</h6>
+													</div>
+												</li>
+												<li>
+													<div class="activity-meta">
+														<i>A Month Ago</i>
 														<span><a href="#" title="">Posted your status. “Hello guys, how
 																are you?”</a></span>
-													</div>
-												</li>
-												<li>
-													<div class="activity-meta">
-														<i>2 Years Ago</i>
-														<span><a href="#" title="">Share a video on her
-																timeline.</a></span>
-														<h6>"<a href="#">you are so funny mr.been.</a>"</h6>
 													</div>
 												</li>
 											</ul>
