--- a/index.html
+++ b/index.html
@@ -600,42 +600,42 @@
 											<h4 class="widget-title">Who's follownig</h4>
 											<ul class="followers">
 												<li>
-													<figure><img src="images/resources/friend-avatar2.jpg" alt="">
+													<figure><img src="images/resources/profile1.jpg" alt="">
 													</figure>
 													<div class="friend-meta">
-														<h4><a href="time-line.html" title="">Kelly Bill</a></h4>
+														<h4><a href="time-line.html" title="">Gerald</a></h4>
 														<a href="#" title="" class="underline">Add Friend</a>
 													</div>
 												</li>
 												<li>
-													<figure><img src="images/resources/friend-avatar4.jpg" alt="">
+													<figure><img src="images/resources/profile2.jpg" alt="">
 													</figure>
 													<div class="friend-meta">
-														<h4><a href="time-line.html" title="">Issabel</a></h4>
+														<h4><a href="time-line.html" title="">Arteta</a></h4>
 														<a href="#" title="" class="underline">Add Friend</a>
 													</div>
 												</li>
 												<li>
-													<figure><img src="images/resources/friend-avatar6.jpg" alt="">
+													<figure><img src="images/resources/profile3.jpg" alt="">
 													</figure>
 													<div class="friend-meta">
-														<h4><a href="time-line.html" title="">Andrew</a></h4>
+														<h4><a href="time-line.html" title="">Alice</a></h4>
 														<a href="#" title="" class="underline">Add Friend</a>
 													</div>
 												</li>
 												<li>
-													<figure><img src="images/resources/friend-avatar8.jpg" alt="">
+													<figure><img src="images/resources/profile4.jpg" alt="">
 													</figure>
 													<div class="friend-meta">
-														<h4><a href="time-line.html" title="">Sophia</a></h4>
+														<h4><a href="time-line.html" title="">Justin</a></h4>
 														<a href="#" title="" class="underline">Add Friend</a>
 													</div>
 												</li>
 												<li>
-													<figure><img src="images/resources/friend-avatar3.jpg" alt="">
+													<figure><img src="images/resources/profile5.jpg" alt="">
 													</figure>
 													<div class="friend-meta">
-														<h4><a href="time-line.html" title="">Allen</a></h4>
+														<h4><a href="time-line.html" title="">Drew</a></h4>
 														<a href="#" title="" class="underline">Add Friend</a>
 													</div>
 												</li>
