create post sec

--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
 											</figure>
 											<div class="newpst-input">
 												<form method="post">
-													<textarea rows="2" placeholder="Créer un post"></textarea>
+													<textarea rows="2" placeholder="Create a post"></textarea>
 												</form>
 											</div>
-											<div class="attachments">
+											<div class="attachments pl-2">
 												<ul>
 													<li>
 														<span class="add-loc">
