--- a/index.html
+++ b/index.html
@@ -721,18 +721,18 @@
 														<div class="more">
 															<div class="more-post-optns"><i class="ti-more-alt"></i>
 																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post
-																	</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i
-																			class="fa fa-flag"></i>Report Post</li>
 																	<li><i class="fa fa-address-card-o"></i>Boost This
-																		Post</li>
-																	<li><i class="fa fa-clock-o"></i>Schedule Post</li>
+																		Post
+																	</li>
+																																	
 																	<li><i class="fa fa-wpexplorer"></i>Select as
-																		featured</li>
+																		featured
+																	</li>
+																	<li class="bad-report"><i class="fa fa-flag"></i>Report Post
+																	</li>	
 																	<li><i class="fa fa-bell-slash-o"></i>Turn off
-																		Notifications</li>
+																		Notifications
+																	</li>
 																</ul>
 															</div>
 														</div>
