--- a/index.html
+++ b/index.html
@@ -752,19 +752,19 @@
 																	<div class="col-lg-6 col-md-6 col-sm-6">
 																		<figure>
 																			<a class="strip"
-																				href="images/resources/album1.jpg"
+																				href="images/resources/image1.jpg"
 																				title="" data-strip-group="mygroup"
 																				data-strip-group-options="loop: false">
-																				<img src="images/resources/album1.jpg"
+																				<img src="images/resources/image1.jpg"
 																					alt="">
 																			</a>
 																		</figure>
 																		<figure>
 																			<a class="strip"
-																				href="images/resources/album2.jpg"
+																				href="images/resources/image3.jpg"
 																				title="" data-strip-group="mygroup"
 																				data-strip-group-options="loop: false">
-																				<img src="images/resources/album2.jpg"
+																				<img src="images/resources/image3.jpg"
 																					alt="">
 																			</a>
 																		</figure>
@@ -772,32 +772,23 @@
 																	<div class="col-lg-6 col-md-6 col-sm-6">
 																		<figure>
 																			<a class="strip"
-																				href="images/resources/album6.jpg"
+																				href="images/resources/image2.jpg"
 																				title="" data-strip-group="mygroup"
 																				data-strip-group-options="loop: false">
-																				<img src="images/resources/album6.jpg"
+																				<img src="images/resources/image2.jpg"
 																					alt="">
 																			</a>
 																		</figure>
 																		<figure>
 																			<a class="strip"
-																				href="images/resources/album5.jpg"
+																				href="images/resources/image4.jpg"
 																				title="" data-strip-group="mygroup"
 																				data-strip-group-options="loop: false">
-																				<img src="images/resources/album5.jpg"
-																					alt="">
-																			</a>
-																		</figure>
-																		<figure>
-																			<a class="strip"
-																				href="images/resources/album4.jpg"
-																				title="" data-strip-group="mygroup"
-																				data-strip-group-options="loop: false">
-																				<img src="images/resources/album4.jpg"
+																				<img src="images/resources/image4.jpg"
 																					alt="">
 																			</a>
 																			<div class="more-photos">
-																				<span>+15</span>
+																				<span>+5 more</span>
 																			</div>
 																		</figure>
 																	</div>
