--- a/index.html
+++ b/index.html
@@ -809,17 +809,17 @@
 																<li>
 																	<span class="views" title="views">
 																		<i class="fa fa-eye"></i>
-																		<ins>1.2k</ins>
+																		<ins>603</ins>
 																	</span>
 																</li>
 																<li>
 																	<div class="likes heart" title="Like/Dislike">❤
-																		<span>2K</span></div>
+																		<span>57</span></div>
 																</li>
 																<li>
 																	<span class="comment" title="Comments">
 																		<i class="fa fa-commenting"></i>
-																		<ins>52</ins>
+																		<ins>12</ins>
 																	</span>
 																</li>
 
@@ -828,7 +828,7 @@
 																		<a class="share-pst" href="#" title="Share">
 																			<i class="fa fa-share-alt"></i>
 																		</a>
-																		<ins>20</ins>
+																		<ins>3</ins>
 																	</span>
 																</li>
 															</ul>
