--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 															</ul>
 															<div class="users-thumb-list">
 																<a data-toggle="tooltip" title="Anderw" href="#">
-																	<img alt="" src="images/resources/userlist-1.jpg">
+																	<img alt="" src="images/resources/admin.jpg">
 																</a>
 																<a data-toggle="tooltip" title="frank" href="#">
 																	<img alt="" src="images/resources/userlist-2.jpg">
@@ -848,8 +848,8 @@
 																<a data-toggle="tooltip" title="Ema" href="#">
 																	<img alt="" src="images/resources/userlist-5.jpg">
 																</a>
-																<span><strong>You</strong>, <b>Sarah</b> and <a href="#"
-																		title="">24+ more</a> liked</span>
+																<span><strong>You</strong>, <b>Drew</b> and <a href="#"
+																		title="">55+ more</a> liked</span>
 															</div>
 														</div>
 													</div>
