--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="topbar stick">
 			<div class="container">
 				<div class="logo">
-					<a title="" href="index.html.html"><img src="images/logo.png" alt=""></a>
+					<a title="" href="index.html"><img src="images/logo.png" alt=""><span class="h5 my-color">Sociee</span></a>
 				</div>
 				<div class="top-area">
 					<div class="top-search">
