--- a/index.html
+++ b/index.html
@@ -857,20 +857,19 @@
 														<ul class="we-comet">
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/nearly3.jpg" alt="">
+																	<img src="images/resources/comment1.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Jason
-																			borne</a></h5>
-																	<p>we are working for the dance and sing songs. this
-																		video is very awesome for the youngster. please
-																		vote this video and like our channel</p>
+																	<h5><a href="time-line.html" title="">Lion King</a></h5>
+																	<p>Microsoft's Xbox Series X is proven to be more powerful than the PS5. This being said
+																		the PS5 launches about 100 dollars cheaper than it's competitor.
+																	</p>
 																	<div class="inline-itms">
-																		<span>1 year ago</span>
+																		<span>3 hrs ago</span>
 																		<a class="we-reply" href="#" title="Reply"><i
 																				class="fa fa-reply"></i></a>
 																		<a href="#" title=""><i
-																				class="fa fa-heart"></i><span>20</span></a>
+																				class="fa fa-heart"></i><span>3</span></a>
 																	</div>
 																</div>
 
