--- a/index.html
+++ b/index.html
@@ -869,28 +869,26 @@
 																		<a class="we-reply" href="#" title="Reply"><i
 																				class="fa fa-reply"></i></a>
 																		<a href="#" title=""><i
-																				class="fa fa-heart"></i><span>3</span></a>
+																				class="fa fa-heart"></i><span>23</span></a>
 																	</div>
 																</div>
 
 															</li>
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/comet-4.jpg" alt="">
+																	<img src="images/resources/comment2.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Sophia</a>
+																	<h5><a href="time-line.html" title="">Randy Chege</a>
 																	</h5>
-																	<p>we are working for the dance and sing songs. this
-																		video is very awesome for the youngster.
-																		<i class="em em-smiley"></i>
+																	<p>I like the new design on the console 😍
 																	</p>
 																	<div class="inline-itms">
-																		<span>1 year ago</span>
+																		<span>2 hrs ago</span>
 																		<a class="we-reply" href="#" title="Reply"><i
 																				class="fa fa-reply"></i></a>
 																		<a href="#" title=""><i
-																				class="fa fa-heart"></i><span>20</span></a>
+																				class="fa fa-heart"></i><span>14</span></a>
 																	</div>
 																</div>
 															</li>
