--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 															</ul>
 															<div class="users-thumb-list">
 																<a data-toggle="tooltip" title="Anderw" href="#">
-																	<img alt="" src="images/resources/userlist-1.jpg">
+																	<img alt="" src="images/resources/liker2.jpg">
 																</a>
 																<a data-toggle="tooltip" title="frank" href="#">
 																	<img alt="" src="images/resources/userlist-2.jpg">
@@ -850,7 +850,7 @@
 																	<img alt="" src="images/resources/userlist-3.jpg">
 																</a>
 																<a data-toggle="tooltip" title="Amy" href="#">
-																	<img alt="" src="images/resources/userlist-4.jpg">
+																	<img alt="" src="images/resources/liker4.jpg">
 																</a>
 																<a data-toggle="tooltip" title="Ema" href="#">
 																	<img alt="" src="images/resources/userlist-5.jpg">
@@ -1035,19 +1035,19 @@
 																	<img alt="" src="images/resources/userlist-1.jpg">
 																</a>
 																<a data-toggle="tooltip" title="frank" href="#">
-																	<img alt="" src="images/resources/userlist-2.jpg">
+																	<img alt="" src="images/resources/liker1.jpg">
 																</a>
 																<a data-toggle="tooltip" title="Sara" href="#">
-																	<img alt="" src="images/resources/userlist-3.jpg">
+																	<img alt="" src="images/resources/liker3.jpg">
 																</a>
 																<a data-toggle="tooltip" title="Amy" href="#">
-																	<img alt="" src="images/resources/userlist-4.jpg">
+																	<img alt="" src="images/resources/liker5.jpg">
 																</a>
 																<a data-toggle="tooltip" title="Ema" href="#">
-																	<img alt="" src="images/resources/userlist-5.jpg">
+																	<img alt="" src="images/resources/userlist-4.jpg">
 																</a>
-																<span><strong>You</strong>, <b>Sarah</b> and <a href="#"
-																		title="">24+ more</a> liked</span>
+																<span><b>Justin</b> and <a href="#"
+																		title="">27 more</a> liked</span>
 															</div>
 														</div>
 													</div>
