--- a/index.html
+++ b/index.html
@@ -840,22 +840,22 @@
 																</li>
 															</ul>
 															<div class="users-thumb-list">
-																<a data-toggle="tooltip" title="Anderw" href="#">
+																<a data-toggle="tooltip" title="Mark" href="#">
+																	<img alt="" src="images/resources/liker1.jpg">
+																</a>
+																<a data-toggle="tooltip" title="Esther" href="#">
 																	<img alt="" src="images/resources/liker2.jpg">
 																</a>
-																<a data-toggle="tooltip" title="frank" href="#">
-																	<img alt="" src="images/resources/userlist-2.jpg">
+																<a data-toggle="tooltip" title="Anonymous" href="#">
+																	<img alt="" src="images/resources/liker3.jpg">
 																</a>
-																<a data-toggle="tooltip" title="Sara" href="#">
-																	<img alt="" src="images/resources/userlist-3.jpg">
-																</a>
-																<a data-toggle="tooltip" title="Amy" href="#">
+																<a data-toggle="tooltip" title="Monster" href="#">
 																	<img alt="" src="images/resources/liker4.jpg">
 																</a>
-																<a data-toggle="tooltip" title="Ema" href="#">
+																<a data-toggle="tooltip" title="Drew" href="#">
 																	<img alt="" src="images/resources/userlist-5.jpg">
 																</a>
-																<span><b>Drew</b> and <a href="#" title="">55+ more</a>
+																<span><b>Drew</b> and <a href="#" title="">56 more</a>
 																	liked</span>
 															</div>
 														</div>
@@ -1031,19 +1031,19 @@
 																</li>
 															</ul>
 															<div class="users-thumb-list">
-																<a data-toggle="tooltip" title="Anderw" href="#">
-																	<img alt="" src="images/resources/userlist-1.jpg">
-																</a>
-																<a data-toggle="tooltip" title="frank" href="#">
-																	<img alt="" src="images/resources/liker1.jpg">
-																</a>
-																<a data-toggle="tooltip" title="Sara" href="#">
-																	<img alt="" src="images/resources/liker3.jpg">
-																</a>
-																<a data-toggle="tooltip" title="Amy" href="#">
+																<a data-toggle="tooltip" title="Billie" href="#">
 																	<img alt="" src="images/resources/liker5.jpg">
 																</a>
-																<a data-toggle="tooltip" title="Ema" href="#">
+																<a data-toggle="tooltip" title="Sunset" href="#">
+																	<img alt="" src="images/resources/liker6.jpg">
+																</a>
+																<a data-toggle="tooltip" title="Cyber" href="#">
+																	<img alt="" src="images/resources/liker7.jpg">
+																</a>
+																<a data-toggle="tooltip" title="Downer" href="#">
+																	<img alt="" src="images/resources/liker8.jpg">
+																</a>
+																<a data-toggle="tooltip" title="Justin" href="#">
 																	<img alt="" src="images/resources/userlist-4.jpg">
 																</a>
 																<span><b>Justin</b> and <a href="#"
